samples/_failures_safe/1761317892_0c7ca8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1165392.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_f1165392.c:114:16: error: missing terminating " character
  114 |         printf("No entries found for level '%
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f1165392.c:114:9: error: expected expression at end of input
  114 |         printf("No entries found for level '%
      |         ^~~~~~
./samples/SAFE/__tmp_f1165392.c:114:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1165392.c:114:9: error: expected declaration or statement at end of input
